--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>hello there!{{time}}</h1>
+        <img src="{{ url_for('video_feed') }}">
     </body>
 </html>
