--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,17 @@
     <head>
         <title>Welcme</title>
         <link rel="stylesheet" type="text/css"href="/static/main.css"/>
+        <style>
+            html,body{
+                background-color: black;
+            }
+            h1{
+
+            }
+        </style>
     </head>
     <body>
-        <h1>hello there!{{time}}</h1>
+        <h1>ROver GUI{{time}}</h1>
         <img src="{{ url_for('video_feed') }}">
     </body>
 </html>
